--- a/src/main/resources/templates/shared/homelayout.html
+++ b/src/main/resources/templates/shared/homelayout.html
@@ -12,7 +12,7 @@
 
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Student Info</a>
+    <a class="navbar-brand" href="/">Speciality Info</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -23,7 +23,7 @@
                 <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/students">Student List</a>
+                <a class="nav-link" href="/speciality">Speciality List</a>
             </li>
         </ul>
     </div>
