--- a/src/main/resources/templates/speciality/specialityList.html
+++ b/src/main/resources/templates/speciality/specialityList.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html >
 <html  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-       layout:decorator="shared/homelayout"
+
        xmlns:th="http://www.thymeleaf.org">
 <body>
 <th:block layout:fragment="header">
@@ -8,14 +8,14 @@
 </th:block>
 
 <th:block layout:fragment="content">
-    <h2>Student List</h2> <br/>
-    <!--<a href="/student">Create a student</a>-->
+    <h2>Speciality List</h2> <br/>
+    <!--<a href="/Speciality">Create a Speciality</a>-->
     <!--<a href="/" id="linkBackHome" >Back to home</a><br/><br/>-->
     <table class="table table-striped">
         <thead>
         <th> Name</th>
         <th>Description</th>
-
+<th></th>
         </thead>
         <tbody>
         <tr th:each="Speciality : ${Specialities}">
@@ -23,8 +23,8 @@
             <td th:text="${Speciality.description}"></td>
 
             <td>
-                <!--<a th:href="@{'/student/' + ${student.id}}">Edit</a>&nbsp;-->
-                <!--<a th:href="@{'/student/delete/' + ${student.id}}">Delete</a>-->
+                <!--<a th:href="@{'/Speciality/' + ${Speciality.id}}">Edit</a>&nbsp;-->
+                <!--<a th:href="@{'/Speciality/delete/' + ${Speciality.id}}">Delete</a>-->
             </td>
         </tr>
         </tbody>
