--- a/src/main/resources/templates/shared/homelayout.html
+++ b/src/main/resources/templates/shared/homelayout.html
@@ -4,7 +4,7 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Student Info</title>
+    <title>speciality Info</title>
     <link rel="stylesheet" href="/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" th:href="@{/css/Style.css}" />
     <th:block layout:fragment="header"></th:block>
