--- a/src/main/resources/templates/speciality/specialityList.html
+++ b/src/main/resources/templates/speciality/specialityList.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html >
 <html  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-
        xmlns:th="http://www.thymeleaf.org">
 <body>
 <th:block layout:fragment="header">
@@ -9,7 +8,7 @@
 
 <th:block layout:fragment="content">
     <h2>Speciality List</h2> <br/>
-    <!--<a href="/Speciality">Create a Speciality</a>-->
+    <a href="/Addspeciality">Add a Speciality</a>
     <!--<a href="/" id="linkBackHome" >Back to home</a><br/><br/>-->
     <table class="table table-striped">
         <thead>
