--- a/src/main/resources/templates/shared/homelayout.html
+++ b/src/main/resources/templates/shared/homelayout.html
@@ -28,6 +28,21 @@
         </ul>
     </div>
 </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">Clinics Info</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent1">
+        <ul class="navbar-nav mr-auto">
+
+            <li class="nav-item">
+                <a class="nav-link" href="/Clinics">Clinics List</a>
+            </li>
+        </ul>
+    </div>
+</nav>
 <div id="mainpanel">
     <th:block  layout:fragment="content"></th:block>
 </div>
