--- a/src/main/resources/templates/shared/homelayout.html
+++ b/src/main/resources/templates/shared/homelayout.html
@@ -25,6 +25,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="/speciality">Speciality List</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/allergies">Allergy List</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/medicalProfessionals">Medical Professionals List</a>
+            </li>
         </ul>
     </div>
 </nav>
