--- a/src/main/resources/templates/Clinic/AddClinic.html
+++ b/src/main/resources/templates/Clinic/AddClinic.html
@@ -23,11 +23,11 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="address">Speciality:</label>
+            <label class="control-label col-sm-2" for="SpecialityList">Speciality:</label>
             <label th:if="${#fields.hasErrors('SpecialityList')}" th:errors="*{SpecialityList}"
                    class="validation-message"></label>
             <div class="col-sm-10">
-                <select multiple th:field="*{SpecialityList}">
+                <select th:field="*{SpecialityList}">
                     <option th:each="Speciality : ${SpecialityList}"
                             th:value="${Speciality.id}"
                             th:text="${Speciality.name}"></option>
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="address">Country:</label>
+            <label class="control-label col-sm-2" for="country">Country:</label>
             <label th:if="${#fields.hasErrors('country')}" th:errors="*{country}"
                    class="validation-message"></label>
             <div class="col-sm-10">
@@ -51,7 +51,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="address">City:</label>
+            <label class="control-label col-sm-2" for="city">City:</label>
             <label th:if="${#fields.hasErrors('city')}" th:errors="*{city}"
                    class="validation-message"></label>
             <div class="col-sm-10">
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="address">ZipCode:</label>
+            <label class="control-label col-sm-2" for="zipcode">ZipCode:</label>
             <label th:if="${#fields.hasErrors('zipcode')}" th:errors="*{zipcode}"
                    class="validation-message"></label>
             <div class="col-sm-10">
@@ -75,7 +75,7 @@
     </form>
     <br/>
 
-    <a href="/clinics">clinic List</a>
+    <a href="/Clinics">clinic List</a>
 </th:block>
 
 <th:block layout:fragment="footer">
