--- a/src/main/resources/templates/shared/homelayout.html
+++ b/src/main/resources/templates/shared/homelayout.html
@@ -34,6 +34,12 @@
             <li class="nav-item">
                 <a class="nav-link" href="/Clinics">Clinics List</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/AddAppointment">Reserve An Appointment</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="/medicalProfessionalAppointment">Doctor Appointments</a>
+        </li>
         </ul>
     </div>
 </nav>
