--- a/src/main/resources/templates/medicalProfessional/medicalProfessionalList.html
+++ b/src/main/resources/templates/medicalProfessional/medicalProfessionalList.html
@@ -19,7 +19,7 @@
         <th>Phone</th>
         <th>Credential</th>
         <th>Speciality</th>
-        <<th>Actions</th>
+        <th>Actions</th>
         </thead>
         <tbody>
         <tr th:each="medicalProfessional:${medicalProfessionals}">
