--- a/src/main/resources/templates/Allergy/AllergyList.html
+++ b/src/main/resources/templates/Allergy/AllergyList.html
@@ -14,7 +14,7 @@
         <table class="table table-striped">
             <thead>
             <th>Description</th>
-            <<th>Actions</th>
+            <th>Actions</th>
             </thead>
             <tbody>
             <tr th:each="allergy : ${allergies}">
